// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div
  className="Checkbox__CheckboxContainer-sc-1gwp7am-1 jMynPv"
  disabled={false}
>
  <input
    checked={true}
    className="Checkbox__CheckboxInput-sc-1gwp7am-2 gnGvnd"
    id={null}
    onBlur={null}
    onChange={null}
    onFocus={null}
    type="checkbox"
  />
  <label
    className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
    fontSize="0.876em"
    fontWeight={600}
    htmlFor={null}
    letterSpacing="0px"
  >
    Checkbox
  </label>
</div>
`;

exports[` 2`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 dGwfwW"
  id={null}
  rows={null}
>
  <div
    className="Checkbox__CheckboxContainer-sc-1gwp7am-1 jMynPv"
    disabled={false}
  >
    <input
      checked={true}
      className="Checkbox__CheckboxInput-sc-1gwp7am-2 gnGvnd"
      id={null}
      onBlur={null}
      onChange={null}
      onFocus={null}
      type="checkbox"
    />
    <label
      className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
      fontSize="0.876em"
      fontWeight={600}
      htmlFor={null}
      letterSpacing="0px"
    >
      Checked
    </label>
  </div>
  <div
    className="Checkbox__CheckboxContainer-sc-1gwp7am-1 jMynPv"
    disabled={false}
  >
    <input
      checked={null}
      className="Checkbox__CheckboxInput-sc-1gwp7am-2 gnGvnd"
      id={null}
      onBlur={null}
      onChange={null}
      onFocus={null}
      type="checkbox"
    />
    <label
      className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
      fontSize="0.876em"
      fontWeight={600}
      htmlFor={null}
      letterSpacing="0px"
    >
      Unchecked
    </label>
  </div>
  <div
    className="Checkbox__CheckboxContainer-sc-1gwp7am-1 gxdWlF"
    disabled={false}
  >
    <input
      checked={null}
      className="Checkbox__CheckboxInput-sc-1gwp7am-2 gsIDVt"
      id={null}
      onBlur={null}
      onChange={null}
      onFocus={null}
      type="checkbox"
    />
    <label
      className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
      fontSize="0.876em"
      fontWeight={600}
      htmlFor={null}
      letterSpacing="0px"
    >
      Error
    </label>
  </div>
  <div
    className="Checkbox__CheckboxContainer-sc-1gwp7am-1 loOzdz"
    disabled={true}
  >
    <input
      checked={null}
      className="Checkbox__CheckboxInput-sc-1gwp7am-2 gXukOn"
      id={null}
      onBlur={null}
      onChange={null}
      onFocus={null}
      tabIndex="-1"
      type="checkbox"
    />
    <label
      className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
      fontSize="0.876em"
      fontWeight={600}
      htmlFor={null}
      letterSpacing="0px"
    >
      Disabled
    </label>
  </div>
</section>
`;

exports[` 3`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 dGwfwW"
  id={null}
  rows={null}
>
  <div
    className="Checkbox__CheckboxContainer-sc-1gwp7am-1 jMynPv"
    disabled={false}
  >
    <input
      checked={null}
      className="Checkbox__CheckboxInput-sc-1gwp7am-2 gnGvnd"
      id={null}
      onBlur={null}
      onChange={null}
      onFocus={null}
      type="checkbox"
    />
    <label
      className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
      fontSize="0.876em"
      fontWeight={600}
      htmlFor={null}
      letterSpacing="0px"
    >
      Left Aligned
    </label>
  </div>
  <div
    className="Checkbox__CheckboxContainer-sc-1gwp7am-1 hTLhND"
    disabled={false}
  >
    <input
      checked={null}
      className="Checkbox__CheckboxInput-sc-1gwp7am-2 gnGvnd"
      id={null}
      onBlur={null}
      onChange={null}
      onFocus={null}
      type="checkbox"
    />
    <label
      className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
      fontSize="0.876em"
      fontWeight={600}
      htmlFor={null}
      letterSpacing="0px"
    >
      Right Aligned
    </label>
  </div>
</section>
`;

exports[` 4`] = `
<form
  action={null}
  className="Form__FormWrapper-v2wrel-0 geeIqY"
  id={null}
  method={null}
  onSubmit={null}
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 dGwfwW Form__Inputs-v2wrel-3 dLfNrm"
    id={null}
    rows={null}
  >
    <section
      className="Form__Section-v2wrel-2 dIXoJq"
    >
      <h5
        className="Typography__TitleText-sc-19auepv-2 KxMwb"
        fontSize="1.15em"
        fontWeight={400}
        letterSpacing="0px"
      >
        Checkbox Group (2 Columns)
      </h5>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 ceKbHJ Checkbox__CheckboxWrapper-sc-1gwp7am-0 cfHVch"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 JteBi Checkbox__InputGroup-sc-1gwp7am-3 LNZza"
          id={null}
          rows={null}
        >
          <div
            className="Checkbox__CheckboxContainer-sc-1gwp7am-1 jMynPv"
            disabled={false}
          >
            <input
              checked={null}
              className="Checkbox__CheckboxInput-sc-1gwp7am-2 gnGvnd"
              id="Checkbox-1"
              onBlur={null}
              onChange={null}
              onFocus={null}
              type="checkbox"
            />
            <label
              className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
              fontSize="0.876em"
              fontWeight={600}
              htmlFor="Checkbox-1"
              letterSpacing="0px"
            >
              Checkbox 1
            </label>
          </div>
          <div
            className="Checkbox__CheckboxContainer-sc-1gwp7am-1 jMynPv"
            disabled={false}
          >
            <input
              checked={null}
              className="Checkbox__CheckboxInput-sc-1gwp7am-2 gnGvnd"
              id="Checkbox-2"
              onBlur={null}
              onChange={null}
              onFocus={null}
              type="checkbox"
            />
            <label
              className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
              fontSize="0.876em"
              fontWeight={600}
              htmlFor="Checkbox-2"
              letterSpacing="0px"
            >
              Checkbox 2
            </label>
          </div>
          <div
            className="Checkbox__CheckboxContainer-sc-1gwp7am-1 jMynPv"
            disabled={false}
          >
            <input
              checked={null}
              className="Checkbox__CheckboxInput-sc-1gwp7am-2 gnGvnd"
              id="Checkbox-3"
              onBlur={null}
              onChange={null}
              onFocus={null}
              type="checkbox"
            />
            <label
              className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
              fontSize="0.876em"
              fontWeight={600}
              htmlFor="Checkbox-3"
              letterSpacing="0px"
            >
              Checkbox 3
            </label>
          </div>
          <div
            className="Checkbox__CheckboxContainer-sc-1gwp7am-1 jMynPv"
            disabled={false}
          >
            <input
              checked={null}
              className="Checkbox__CheckboxInput-sc-1gwp7am-2 gnGvnd"
              id="Checkbox-4"
              onBlur={null}
              onChange={null}
              onFocus={null}
              type="checkbox"
            />
            <label
              className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
              fontSize="0.876em"
              fontWeight={600}
              htmlFor="Checkbox-4"
              letterSpacing="0px"
            >
              Checkbox 4
            </label>
          </div>
        </section>
      </section>
    </section>
  </section>
</form>
`;
